--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,4 +1,3 @@
-
 [/Script/Engine.CollisionProfile]
 +Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles",bCanModify=True)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
@@ -14,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/S05_TestingGrounds.S05_TestingGroundsGameMode
+GlobalDefaultGameMode=/Game/Blueprints/GameMode_BP.GameMode_BP_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.Engine]
@@ -73,5 +72,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
